Revision history for Dist-Zilla-PluginBundle-CHGOVUK

{{$NEXT}}

0.05  2014-05-22
  - Get version number from perl module (not git tag)
  - Copy build file and META.json back from build

0.04  2014-05-12
  - Fix broken build

0.03  2014-05-09
  - Add prereqs option to make prereqs gathering configurable

0.02  2014-03-09
  - Use CHGOVUK PluginBundle to build itself

0.01  2014-03-09
  - Initial release